@@ -1,3 +1,4 @@
+* Support multiselection field
 * Support dot notation on PYSON Eval
 * Manage sequence
 * Add drag and drop on tree views
